--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,1 +1,21 @@
+<%= form_for @post do |f| %>
+    <%= f.label :title %>
+    <%= f.text_field :title %><br />
 
+    <%= f.label :content %>
+    <%= f.text_area :content %><br />
+
+    <%= f.label "Select Categories and/or Create a New Category" %><br />
+    <%= f.collection_check_boxes :category_ids, Category.all, :id, :name %> <br />
+
+    <%= f.fields_for :categories, post.categories.build do |categories_attributes| %>
+        <%= categories_attributes.label "Add new categories:" %>
+        <%= categories_attributes.text_field :name %> 
+    <% end %>
+
+        <%= f.fields_for :categories, post.categories.build do |categories_attributes| %>
+        <%= categories_attributes.text_field :name %> 
+    <% end %>
+
+    <%= f.submit %>
+<% end %>
